k8s/apps/oneill_art/wordpress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: wordpress
  name: wordpress
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
      - env:
        - name: WORDPRESS_DB_HOST
          value: db:3306
        - name: WORDPRESS_DB_NAME
          value: wordpress_db
        - name: WORDPRESS_DB_USER
          value: wp_user
        - name: WORDPRESS_DB_PASSWORD
          value: REDACTED
        image: wordpress:latest
        name: wordpress
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /var/www/html
          name: wordpress-data-0
        - mountPath: /usr/local/etc/php/conf.d/uploads.ini
          name: wordpress-data-1
      volumes:
      - name: wordpress-data-0
        persistentVolumeClaim:
          claimName: wordpress-data-0
      - name: wordpress-data-1
        persistentVolumeClaim:
          claimName: wordpress-data-1
