k8s/apps/oneill_art/oneill-art-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oneill-art-db
  namespace: default
spec:
  ports:
  - name: port-3306
    port: 3306
    targetPort: 3306
  selector:
    app: oneill-art-db
