k8s/apps/oneill_art/wordpress-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: wordpress-ingress
  namespace: default
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`oneillart.example.com`)
    services:
    - name: wordpress
      port: 80
  tls:
    certResolver: cloudflare
